chore: update artefact name

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
-          binary_name: aerospace-marks
+          binary_name: aerospace-scratchpad
           project_path: ./
           extra_files: LICENSE README.md
           compress_assets: true
