--- a/.github/workflows/reset-nightly.yml
+++ b/.github/workflows/reset-nightly.yml
@@ -12,5 +12,6 @@ jobs:
       - name: Reset dev branch to master
         uses: nicksnell/action-reset-repo@master
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           base_branch: main
           reset_branch: nightly
