chore(ci): adds auto nix bumper
temp

temp

temp

temp

temp

temp

temp

temp

tmp

temp

tmp

--- a/.github/workflows/reset-nightly.yml
+++ b/.github/workflows/reset-nightly.yml
@@ -9,9 +9,25 @@ jobs:
   reset:
     runs-on: ubuntu-latest
     steps:
-      - name: Reset dev branch to master
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: reset nightly branch
         uses: nicksnell/action-reset-repo@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
           base_branch: main
           reset_branch: nightly
+
+      - uses: cachix/install-nix-action@v27
+        with:
+          github_access_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Generate new hashes
+        run: |
+          bash scripts/update-nix-hash.sh nix/package-nightly.nix ".#nightly"
+
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v7
+        with:
+          commit-message: "chore(nix): bump nightly hashes and version"
+          title: "chore(nix): bump nightly hashes and version"
