--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,3 +37,24 @@ jobs:
           extra_files: LICENSE README.md
           compress_assets: true
           overwrite: true
+
+  nix-release:
+    runs-on: ubuntu-latest
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - uses: cachix/install-nix-action@v27
+        with:
+          github_access_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Generate new hashes
+        run: |
+          version=$(git describe --tags --abbrev=0)
+          sed -i 's#version = ".*";#version = "'"$version"'";#' nix/package-default.nix
+          bash scripts/update-nix-hash.sh nix/package-default.nix ".#default"
+
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v7
+        with:
+          commit-message: "chore(nix): bump nix hashes and version"
+          title: "chore(nix): bump nix hashes and version"
