chore(ci): fix base branch for release action

--- a/.github/workflows/reset-nightly.yml
+++ b/.github/workflows/reset-nightly.yml
@@ -31,3 +31,4 @@ jobs:
         with:
           commit-message: "chore(nix): bump nightly hashes and version"
           title: "chore(nix): bump nightly hashes and version"
+          base: main
