chore(ci): make sure to check main
(cherry picked from commit 30310f89e9cfc897933caff1ee1143a214f89766)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,7 @@ jobs:
             goos: windows
     steps:
       - uses: actions/checkout@v4
+        if: github.event_name == 'release'
 
       - name: Set up Go
         uses: actions/setup-go@v4
@@ -46,6 +47,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
+          fetch-depth: 0 # Ensure we have the full history for versioning
           ref: main
 
       - uses: cachix/install-nix-action@v27
