chore(ci): default bot PR body text
(cherry picked from commit e7d25bb4ac9dec6d9b2d8cba2e08a3b4406be573)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,4 +64,5 @@ jobs:
         with:
           commit-message: "chore(nix): bump nix hashes and version"
           title: "chore(nix): bump nix hashes and version"
+          body: "This PR updates the Nix default package hashes and version."
           base: main
