chore(ci): add ldflags for build with right version
Summary:
This commit updates the release workflow configuration by adding linker flags to embed version information into the binary during the build process.

Detailed Changes:
 - .github/workflows/release.yml:
   - Added `ldflags` to include version information in the built binary using the release tag name.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,7 @@ jobs:
           binary_name: aerospace-scratchpad
           project_path: ./
           extra_files: LICENSE README.md
+          ldflags: "-s -w -X github.com/cristianoliveira/aerospace-scratchpad/cmd.VERSION=${{ github.event.release.tag_name }}"
           compress_assets: true
           overwrite: true
 
