chore: after install show version
(cherry picked from commit 580770c6b2ac369db033802a9bdaa9e814f9d4fc)

--- a/.watch.yaml
+++ b/.watch.yaml
@@ -21,6 +21,7 @@
   run: 
     # Validate if file .install contains 1 otherwise 
     - if [ -f .tmp/install ]; then go install . && echo "installed latest" ; fi
+    - aerospace-scratchpad -v
   change: 
     - '**/*.go'
     - '**/*.snap'
